[package]
name = "gm6020_can_cpp"
version = "0.1.0"
edition = "2021"
authors = [
    "Matthew Foran <matthewjforan@gmail.com>",
]
repository = "https://github.com/mjforan/gm6020_can"
license = "MPL 2.0"
description = "CAN bus control interface of RoboMaster GM6020 motor, with C++ bindings"

[dependencies]
gm6020_can = { path = "gm6020_can" }

[build-dependencies]
cbindgen = "0.26.0"
cc = "1.1.18"
# cargo-expand

[dev-dependencies]
ctrlc = "3.4"


[lib]
name = "gm6020_can_cpp"
crate-type = ["staticlib", "cdylib", "lib"]


[[example]]
name = "gm6020_can_test_cpp"

