[package]
name = "rm_motors_can_cpp"
version = "0.1.0"
edition = "2021"
authors = [
    "Matthew Foran <matthewjforan@gmail.com>",
]
repository = "https://github.com/mjforan/rm_motors_can"
license = "MPL 2.0"
description = "CAN bus control interface of RoboMaster motors, with C++ bindings"

[dependencies]
rm_motors_can = { path = "rm_motors_can" }

[build-dependencies]
cbindgen = "0.26.0"
cc = "1.1.18"
# cargo-expand

[dev-dependencies]
ctrlc = "3.4"


[lib]
name = "rm_motors_can_cpp"
crate-type = ["staticlib", "cdylib", "lib"]


[[example]]
name = "rm_motors_can_test_cpp"

