[package]
name = "rm_motors_can"
version = "0.1.0"
edition = "2021"
authors = [
    "Matthew Foran <matthewjforan@gmail.com>",
]
repository = "https://github.com/mjforan/rm_motors_can"
license = "MPL 2.0"
description = "CAN bus control interface of RoboMaster motors"

[dependencies]
embedded-can = "0.4.1"
socketcan = "3.3.0"

[dev-dependencies]
ctrlc = "3.4"

[lib]
name = "rm_motors_can"
crate-type = ["lib"]

[[example]]
name = "rm_motors_can_test"
